<resources>
    <string name="app_name">KeepFit</string>

    <string name="account_profile">Profile</string>
    <string name="history">History</string>
    <string name="myfavor">Favors</string>
    <string name="shopping_list">Shopping List</string>
    <string name="permission">Permissions</string>
    <string name="help">Help</string>
    <string name="about_app">About KeepFit</string>
    <string name="settings">Setting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nick_name">nick：%s</string>
    <string name="nick_sign">I am a flower.</string>

    <string name="page0">KeepFit</string>
    <string name="page1">Register</string>
    <string name="page2">Friends</string>
    <string name="page3">Shop</string>

    <string name="target_des">target %sstep</string>
    <string name="fit_type_des">Fitness Type</string>
    <string name="friend_refer">Reference</string>
    <string name="friend_active">Active</string>
    <string name="friend_event">Event</string>
</resources>
