<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/account_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_favor"
            android:icon="@drawable/ic_menu_favor"
            android:title="@string/myfavor" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_menu_shopping"
            android:title="@string/shopping_list" />

    </group>

    <item android:title="Tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about_app" />
        </menu>
    </item>

</menu>
