<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/friend_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/friend_refer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/type_name_font"
            android:padding="@dimen/today_padding_gap"
            android:text="@string/friend_refer"/>
        <TextView
            android:id="@+id/friend_active"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/type_name_font"
            android:padding="@dimen/today_padding_gap"
            android:text="@string/friend_active"/>
        <TextView
            android:id="@+id/friend_event"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/type_name_font"
            android:padding="@dimen/today_padding_gap"
            android:text="@string/friend_event"/>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/friend_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/friend_type"/>

</RelativeLayout>
